[project]
name = "comfyui-rbg-imagestitchplus"
version = "2.1.0"
description = "An advanced image stitching node for ComfyUI."
readme = "README.md"
requires-python = ">=3.8"
#  Used by Comfy Registry https://comfyregistry.org
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
license = { text = "MIT" }
authors = [
  { name = "Ramon Guthrie"},
]
classifiers = [
    "Development Status: 4 - Beta",
    "Intended Audience: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy",
    "Pillow",
]

[project.urls]
"Homepage" = "https://github.com/RamonGuthrie/ComfyUI-RBG-ImageStitchPlus"
"Bug Tracker" = "https://github.com/RamonGuthrie/ComfyUI-RBG-ImageStitchPlus/issues"
"Linkedin" = "https://www.linkedin.com/in/ramonguthrie"


